Bug 453395 - Kalendar reminders crashes on startup
Summary: Kalendar reminders crashes on startup
Status: RESOLVED FIXED
Alias: None
Product: Merkuro
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Claudio Cambra
URL:
Keywords: drkonqi
: 453293 454500 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-04 18:48 UTC by Rose Hudson
Modified: 2022-07-11 12:28 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rose Hudson 2022-05-04 18:48:27 UTC
Application: kalendarac (5.20.0)

Qt Version: 5.15.3
Frameworks Version: 5.93.0
Operating System: Linux 5.17.5-arch1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 5.24.5 [KCrashBackend]

-- Information about the crash:
- What I was doing when the application crashed:
logging into plasma wayland session. dr konqi also appeared once I opened the kalendar app - the app itself seems to be working, but a message appeared saying that "Reminders" had crashed

The crash can be reproduced sometimes.

-- Backtrace:
Application: Reminders (kalendarac), signal: Segmentation fault
Content of s_kcrashErrorMessage: {_M_t = {<std::__uniq_ptr_impl<char, std::default_delete<char []> >> = {_M_t = std::tuple containing = {[1] = 0x0, [2] = {<No data fields>}}}, <No data fields>}}
[KCrash Handler]
#6  KCalendarCore::Incidence::recurs (this=0x0) at /usr/src/debug/kcalendarcore-5.93.0/src/incidence.cpp:605
#7  0x000055b4bc5574ae in KalendarAlarmClient::occurrenceForAlarm (this=0x7ffe38608b90, from=..., alarm=..., incidence=...) at /usr/src/debug/akonadi-calendar-22.04.0/reminder-daemon/kalendaralarmclient.cpp:281
#8  KalendarAlarmClient::checkAlarms (this=0x7ffe38608b90) at /usr/src/debug/akonadi-calendar-22.04.0/reminder-daemon/kalendaralarmclient.cpp:252
#9  0x00007fcfe4723463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#10 doActivate<false> (sender=0x7fcfcc00ec40, signal_index=27, argv=0x7ffe386083b0) at kernel/qobject.cpp:3886
#11 0x00007fcfe52fe217 in Akonadi::EntityTreeModel::collectionPopulated (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/build/src/core/KF5AkonadiCore_autogen/include/moc_entitytreemodel.cpp:492
#12 0x00007fcfe5308641 in Akonadi::EntityTreeModelPrivate::itemFetchJobDone (job=<optimized out>, collectionId=<optimized out>, this=0x55b4bdc590a0) at /usr/src/debug/akonadi-22.04.0/src/core/models/entitytreemodel_p.cpp:1315
#13 operator() (job=<optimized out>, __closure=<optimized out>) at /usr/src/debug/akonadi-22.04.0/src/core/models/entitytreemodel_p.cpp:225
#14 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<KJob*>, void, Akonadi::EntityTreeModelPrivate::fetchItems(const Akonadi::Collection&)::<lambda(KJob*)> >::call (f=..., f=..., arg=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:146
#15 QtPrivate::Functor<Akonadi::EntityTreeModelPrivate::fetchItems(const Akonadi::Collection&)::<lambda(KJob*)>, 1>::call<QtPrivate::List<KJob*>, void> (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:256
#16 QtPrivate::QFunctorSlotObject<Akonadi::EntityTreeModelPrivate::fetchItems(const Akonadi::Collection&)::<lambda(KJob*)>, 1, QtPrivate::List<KJob*>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:443
#17 0x00007fcfe4723463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#18 doActivate<false> (sender=0x55b4bdd057d0, signal_index=6, argv=0x7ffe38608550) at kernel/qobject.cpp:3886
#19 0x00007fcfe511f8a1 in KJob::result (this=this@entry=0x55b4bdd057d0, _t1=<optimized out>, _t1@entry=0x55b4bdd057d0, _t2=...) at /usr/src/debug/build/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:633
#20 0x00007fcfe5123d4c in KJob::finishJob (this=0x55b4bdd057d0, emitResult=<optimized out>) at /usr/src/debug/kcoreaddons-5.93.0/src/lib/jobs/kjob.cpp:98
#21 0x00007fcfe47167d6 in QObject::event (this=<optimized out>, e=0x55b4bddb57a0) at kernel/qobject.cpp:1314
#22 0x00007fcfe46f25aa in QCoreApplication::notifyInternal2 (receiver=0x55b4bdd057d0, event=0x55b4bddb57a0) at kernel/qcoreapplication.cpp:1064
#23 0x00007fcfe46f30a9 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55b4bdbea780) at kernel/qcoreapplication.cpp:1821
#24 0x00007fcfe473a678 in postEventSourceDispatch (s=0x55b4bdc14160) at kernel/qeventdispatcher_glib.cpp:277
#25 0x00007fcfe20db163 in g_main_dispatch (context=0x55b4bdc16190) at ../glib/glib/gmain.c:3417
#26 g_main_context_dispatch (context=0x55b4bdc16190) at ../glib/glib/gmain.c:4135
#27 0x00007fcfe21319e9 in g_main_context_iterate.constprop.0 (context=context@entry=0x55b4bdc16190, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4211
#28 0x00007fcfe20d86c5 in g_main_context_iteration (context=0x55b4bdc16190, may_block=1) at ../glib/glib/gmain.c:4276
#29 0x00007fcfe473e57a in QEventDispatcherGlib::processEvents (this=0x55b4bdbc9e30, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#30 0x00007fcfe46ea88b in QEventLoop::exec (this=0x7ffe386089b0, flags=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#31 0x00007fcfe46f5fd7 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#32 0x00007fcfe4b431d2 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1867
#33 0x000055b4bc553470 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/akonadi-calendar-22.04.0/reminder-daemon/kalendaracmain.cpp:53
[Inferior 1 (process 2238) detached]

Reported using DrKonqi
This report was filed against 'kde' because the product 'kalendarac' could not be located in Bugzilla. Add it to drkonqi's mappings file!
Comment 1 Prajna Sariputra 2022-05-13 09:45:01 UTC
I am also experiencing this crash on some days, the only pattern I can see as to when it happens is after certain events' reminders trigger on a given day (say there is an event at 1pm, on the day before 1pm everything is fine, and for the rest of the day the Reminders daemon will fail every time), so far it appears it only happens on events synced from my Exchange account.

Operating System: Arch Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kalendar version: 22.04.0
Kernel Version: 5.17.5-arch1-2 (64-bit)
Graphics Platform: Wayland

Application: Reminders (kalendarac), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = 0x0}
[KCrash Handler]
#6  KCalendarCore::Incidence::recurs (this=0x0) at /usr/src/debug/kcalendarcore-5.93.0/src/incidence.cpp:605
#7  0x00005630a8f384ae in KalendarAlarmClient::occurrenceForAlarm (this=0x7ffeebe15130, from=..., alarm=..., incidence=...) at /usr/src/debug/akonadi-calendar-22.04.0/reminder-daemon/kalendaralarmclient.cpp:281
#8  KalendarAlarmClient::checkAlarms (this=0x7ffeebe15130) at /usr/src/debug/akonadi-calendar-22.04.0/reminder-daemon/kalendaralarmclient.cpp:252
#9  0x00007fbe3dcdf463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#10 doActivate<false> (sender=0x5630aa963390, signal_index=27, argv=0x7ffeebe14950) at kernel/qobject.cpp:3886
#11 0x00007fbe3e8ba217 in Akonadi::EntityTreeModel::collectionPopulated (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/build/src/core/KF5AkonadiCore_autogen/include/moc_entitytreemodel.cpp:492
#12 0x00007fbe3e8c4641 in Akonadi::EntityTreeModelPrivate::itemFetchJobDone (job=<optimized out>, collectionId=<optimized out>, this=0x5630aa963eb0) at /usr/src/debug/akonadi-22.04.0/src/core/models/entitytreemodel_p.cpp:1315
#13 operator() (job=<optimized out>, __closure=<optimized out>) at /usr/src/debug/akonadi-22.04.0/src/core/models/entitytreemodel_p.cpp:225
#14 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<KJob*>, void, Akonadi::EntityTreeModelPrivate::fetchItems(const Akonadi::Collection&)::<lambda(KJob*)> >::call (f=..., f=..., arg=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:146
#15 QtPrivate::Functor<Akonadi::EntityTreeModelPrivate::fetchItems(const Akonadi::Collection&)::<lambda(KJob*)>, 1>::call<QtPrivate::List<KJob*>, void> (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:256
#16 QtPrivate::QFunctorSlotObject<Akonadi::EntityTreeModelPrivate::fetchItems(const Akonadi::Collection&)::<lambda(KJob*)>, 1, QtPrivate::List<KJob*>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:443
#17 0x00007fbe3dcdf463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#18 doActivate<false> (sender=0x5630aa96d800, signal_index=6, argv=0x7ffeebe14af0) at kernel/qobject.cpp:3886
#19 0x00007fbe3e6db8a1 in KJob::result (this=this@entry=0x5630aa96d800, _t1=<optimized out>, _t1@entry=0x5630aa96d800, _t2=...) at /usr/src/debug/build/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:633
#20 0x00007fbe3e6dfd4c in KJob::finishJob (this=0x5630aa96d800, emitResult=<optimized out>) at /usr/src/debug/kcoreaddons-5.93.0/src/lib/jobs/kjob.cpp:98
#21 0x00007fbe3dcd27d6 in QObject::event (this=<optimized out>, e=0x5630aaa026c0) at kernel/qobject.cpp:1314
#22 0x00007fbe3dcae5aa in QCoreApplication::notifyInternal2 (receiver=0x5630aa96d800, event=0x5630aaa026c0) at kernel/qcoreapplication.cpp:1064
#23 0x00007fbe3dcaf0a9 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5630aa915780) at kernel/qcoreapplication.cpp:1821
#24 0x00007fbe3dcf6678 in postEventSourceDispatch (s=0x5630aa93ed10) at kernel/qeventdispatcher_glib.cpp:277
#25 0x00007fbe3b645163 in g_main_dispatch (context=0x5630aa940de0) at ../glib/glib/gmain.c:3417
#26 g_main_context_dispatch (context=0x5630aa940de0) at ../glib/glib/gmain.c:4135
#27 0x00007fbe3b69b9e9 in g_main_context_iterate.constprop.0 (context=context@entry=0x5630aa940de0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4211
#28 0x00007fbe3b6426c5 in g_main_context_iteration (context=0x5630aa940de0, may_block=1) at ../glib/glib/gmain.c:4276
#29 0x00007fbe3dcfa57a in QEventDispatcherGlib::processEvents (this=0x5630aa8f4d70, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#30 0x00007fbe3dca688b in QEventLoop::exec (this=0x7ffeebe14f50, flags=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#31 0x00007fbe3dcb1fd7 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#32 0x00007fbe3e0ff1d2 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1867
#33 0x00005630a8f34470 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/akonadi-calendar-22.04.0/reminder-daemon/kalendaracmain.cpp:53
[Inferior 1 (process 6986) detached]
Comment 2 Nicolas Fella 2022-05-28 14:02:30 UTC
*** Bug 454500 has been marked as a duplicate of this bug. ***
Comment 3 Carl Schwan 2022-06-01 16:24:29 UTC
Git commit 939d98bf4e82c7fd2547b5d3882fcb95f0b8f288 by Carl Schwan.
Committed on 01/06/2022 at 16:01.
Pushed by carlschwan into branch 'master'.

Handle empty incidence

Log them instead of crashin

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +6    -2    reminder-daemon/kalendaralarmclient.cpp

https://invent.kde.org/pim/akonadi-calendar/commit/939d98bf4e82c7fd2547b5d3882fcb95f0b8f288
Comment 4 Carl Schwan 2022-06-01 16:39:49 UTC
Git commit c9999701f5d07dfc8797e730ee581f730c203f67 by Carl Schwan.
Committed on 01/06/2022 at 16:39.
Pushed by carlschwan into branch 'cherry-pick-939d98bf'.

Handle empty incidence

Log them instead of crashin

Signed-off-by: Carl Schwan <carl@carlschwan.eu>


(cherry picked from commit 939d98bf4e82c7fd2547b5d3882fcb95f0b8f288)

M  +6    -2    reminder-daemon/kalendaralarmclient.cpp

https://invent.kde.org/pim/akonadi-calendar/commit/c9999701f5d07dfc8797e730ee581f730c203f67
Comment 5 Fabian Vogt 2022-07-11 12:28:10 UTC
*** Bug 453293 has been marked as a duplicate of this bug. ***