Handle empty incidence

Log them instead of crashin

BUG: 453395

Signed-off-by: Carl Schwan <carl@carlschwan.eu>